kube/airdrop-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airdrop-java-deployment
  labels:
    app: airdrop-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airdrop-java
  template:
    metadata:
      labels:
        app: airdrop-java
    spec:
      containers:
      - name: airdrop-java
        image: ghcr.io/starcoinorg/starcoin_airdrop_java:sha-70b9474
        ports:
        - containerPort: 8787
