kube/barnard_airdrop-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airdrop-java-deployment-barnard
  labels:
    app: airdrop-java-barnard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airdrop-java-barnard
  template:
    metadata:
      labels:
        app: airdrop-java-barnard
    spec:
      containers:
      - name: airdrop-java-barnard
        image: ghcr.io/starcoinorg/starcoin_airdrop_java:sha-7879628
        ports:
        - containerPort: 8787
