kube/airdrop-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airdrop-java
  name: airdrop-java
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8787
  selector:
    app: airdrop-java
  type: ClusterIP
