kube/barnard_airdrop-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airdrop-java-barnard
  name: airdrop-java-barnard
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8787
  selector:
    app: airdrop-java-barnard
  type: LoadBalancer
status:
  loadBalancer: {}
