kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "poll-and-airdrop-api-ingress"
#  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: poll-and-airdrop-api
spec:
  rules:
    - http:
        paths:
          - path: /v1/polls/*
            backend:
              serviceName: "poll-api"
              servicePort: 80
          - path: /poll-api-doc/*
            backend:
              serviceName: "poll-api"
              servicePort: 80
          - path: /v1/airdrops/*
            backend:
              serviceName: "airdrop-java"
              servicePort: 80
          - path: /airdrop-api-doc/*
            backend:
              serviceName: "airdrop-java"
              servicePort: 80
